fix menu for FA lang and add content_wrap

--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -1,11 +1,6 @@
-/*----- Omid GH & Yashar AMD -----*/
-
 div.container {
 	-webkit-transition: all 700ms;
 	position: relative;
-}
-
-.font {
 	font-family: 'PT Sans Narrow', 'Helvetica Neue', Arial, sans-serif;
 }
 
@@ -198,7 +193,7 @@ div.menu li menu li:hover > a img {
 div.menu_wrap div.hide {
 	width 	: 240px;
 	height 	: 115px;
-	padding : 5px;
+	padding : 5px 0;
 	background-image	: url('./images/hide_menu_back.png');
 	background-repeat	: no-repeat;
 	background-position	: left top;
@@ -208,8 +203,8 @@ div.menu_wrap div.hide img {
 	margin-left: 90px;
 }
 
-/*---------- Gallery col2 & col3 Page ----------*/
-div.gallery,   /* background form in diferent page */
+/*---------- content_wrap col2 & col3 Page ----------*/
+div.content_wrap,   /* background form in diferent page */
 div.contact-us,
 div.blog,
 div.galleria,
@@ -221,34 +216,34 @@ div.sliderview {
 	border: 1px solid #343434;
 }
 
-div.gallery header.head h2 {
+div.content_wrap header.head h2 {
 	font-size		: 30px;
 	text-transform	: uppercase;
 }
 
-div.gallery div.content section.row div.box {
+div.content_wrap div.content section.row div.box {
 	width 		: 196px;
 	min-height	: 145px;	
 	position 	: relative;
 }
 
-/*---------- Gallery: 2 Columns ----------*/
-div.gallery div.content section.row div.box.clmn2 {
+/*---------- content_wrap: 2 Columns ----------*/
+div.content_wrap div.content section.row div.box.clmn2 {
 	width 		: 295px;
 	min-height	: 215px;	
 	position 	: relative;
 }
-/*---------- end gallery: 2 Col ----------*/
+/*---------- end content_wrap: 2 Col ----------*/
 
-div.gallery div.content section.row div.box a {
+div.content_wrap div.content section.row div.box a {
 	display: block;
 }
 
-div.gallery div.content section.row div.box img {
+div.content_wrap div.content section.row div.box img {
 	display: block;
 }
 
-div.gallery div.content section.row div.box a:hover img {
+div.content_wrap div.content section.row div.box a:hover img {
 	background-color: #000;
 	opacity			: 0.3;
 	transition 			: opacity 800ms;
@@ -258,7 +253,7 @@ div.gallery div.content section.row div.box a:hover img {
 	-o-transition		: opacity 800ms;
 }
 
-div.gallery div.content section.row div.box a:hover span {
+div.content_wrap div.content section.row div.box a:hover span {
 	display	: block;
 	position: absolute;
 	top 	: 0;
@@ -270,8 +265,8 @@ div.gallery div.content section.row div.box a:hover span {
 	background-position	: center;
 }
 
-/*---------- Gallery: 2 Columns ----------*/
-div.gallery div.content section.row div.box.clmn2 a:hover span {
+/*---------- content_wrap: 2 Columns ----------*/
+div.content_wrap div.content section.row div.box.clmn2 a:hover span {
 	display	: block;
 	position: absolute;
 	top 	: 0;
@@ -282,13 +277,13 @@ div.gallery div.content section.row div.box.clmn2 a:hover span {
 	background-repeat	: no-repeat;
 	background-position	: center;
 }
-/*---------- end gallery: 2 Col ----------*/
+/*---------- end content_wrap: 2 Col ----------*/
 
-div.gallery div.content section.row div.box a:hover img {
+div.content_wrap div.content section.row div.box a:hover img {
 	box-shadow: -1px 1px 10px 1px #ccc;
 }
 
-div.gallery div.content section.text p {
+div.content_wrap div.content section.text p {
 	font 		: normal 12px Verdana, Arial, sans-serif;
 	line-height	: 18px;
 }
@@ -496,21 +491,21 @@ div.social ul li a.google:hover {
 }
 
 /*---------- Portfolio col2 & col3 page ----------*/
-div.gallery div.content section.row article.box {
+div.content_wrap div.content section.row article.box {
 	width 		: 290px;
 	min-height	: 210px;    
 	position 	: relative;
 }
 
 /*---------- Portfolio: 3 Columns ----------*/
-div.gallery div.content section.row article.box.col2 {
+div.content_wrap div.content section.row article.box.col2 {
 	width 		: 196px;
 	min-height	: 145px;    
 	position 	: relative;
 }
 /*---------- end portfolio: 3 col ----------*/
 
-div.gallery div.content section.row article.box h3 {
+div.content_wrap div.content section.row article.box h3 {
 	display 	: block;
 	font-size	: 18px;
 	font-weight	: bold;
@@ -518,15 +513,15 @@ div.gallery div.content section.row article.box h3 {
 	padding-bottom: 10px;
 }
 
-div.gallery div.content section.row article.box a {
+div.content_wrap div.content section.row article.box a {
 	display: block;
 }
 
-div.gallery div.content section.row article.box img {
+div.content_wrap div.content section.row article.box img {
 	display: block;
 }
 
-div.gallery div.content section.row article.box a:hover img {
+div.content_wrap div.content section.row article.box a:hover img {
 	background-color: #000;
 	opacity		: 0.3;
 	box-shadow	: -1px 1px 10px 1px #ccc;
@@ -537,7 +532,7 @@ div.gallery div.content section.row article.box a:hover img {
 	-o-transition		: opacity 800ms;
 }
 
-div.gallery div.content section.row article.box a:hover span {
+div.content_wrap div.content section.row article.box a:hover span {
 	display	: block;
 	position: absolute;
 	top 	: 0;
@@ -551,7 +546,7 @@ div.gallery div.content section.row article.box a:hover span {
 }
 
 /*---------- Portfolio: 3 Columns ----------*/
-div.gallery div.content section.row article.box.col2 a:hover span {
+div.content_wrap div.content section.row article.box.col2 a:hover span {
 	display	: block;
 	position: absolute;
 	top 	: 0;
@@ -565,12 +560,12 @@ div.gallery div.content section.row article.box.col2 a:hover span {
 }
 /*---------- end portfolio: 3 col ----------*/
 
-div.gallery div.content article.box p {
+div.content_wrap div.content article.box p {
 	display		: block;
 	padding-top	: 5px;
 }
 
-div.gallery div.content article.box a.readmore {
+div.content_wrap div.content article.box a.readmore {
 	width 		: 100px;
 	height 		: 30px;
 	line-height	: 30px;
@@ -588,7 +583,11 @@ div.gallery div.content article.box a.readmore {
 	background: -o-gradient(linear, left top, left bottom, from(#666), to(#333));
 }
 
-div.gallery div.content article.box a.readmore:hover {
+div.content_wrap{
+	margin-right: auto;
+}
+
+div.content_wrap div.content article.box a.readmore:hover {
 	background: gradient(linear, left top, left bottom, from(#333), to(#666));
 	background: -webkit-gradient(linear, left top, left bottom, from(#333), to(#666));
 	background: -moz-linear-gradient(rgb(51, 51, 51), rgb(102, 102, 102)) repeat scroll 0% 0% transparent;
@@ -1095,15 +1094,15 @@ div.sliderview div.content section.slideshow menu li:hover {
 	color: #262626;
 }
 
-/*---------- Sample Page ----------*/
-div.sample div.content p {
+/*---------- about Page ----------*/
+div.about div.content p {
 	padding-top	: 20px;
 	color 		: #CCC;
 	font 		: normal 12px Verdana, Arial, sans-serif;
 	line-height	: 20px;
 }
 
-div.sample div.content h1 {
+div.about div.content h1 {
 	font-size	: 25px;
 	font-weight	: bold;
 	margin-top	: 50px;
